Renamed home to hero; added hero color background

--- a/css/hero.css
+++ b/css/hero.css
@@ -1,4 +1,5 @@
 .hero-section {
+    background-color: #0A1128;
     background-image: url(../images/backgrounds/jr-korpa-E2i7Hftb_rI-unsplash.jpg);
     padding: 100px;
     height: 400px;
